--- a/client/modify.html
+++ b/client/modify.html
@@ -9,7 +9,7 @@
     <title>Booking Ticket</title>
     <!--<a href=""></a>-->
     <!--CSSからの読み込み宣言-->
-    <link rel="stylesheet" href="style.css" >
+    <link rel="stylesheet" href="modify.css" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
    
@@ -50,7 +50,6 @@
   <!-- todo insert input box and add button -->
    <div  id="input-reserve"> 
    
-    <input type="text" class="form-control" placeholder="Card Number" id="card_no">
     <input type="text" class="form-control" placeholder="Flight ID" id="flightID">
     <input type="text" class="form-control" placeholder="NAME-0" id="name_0">
     <input type="text" class="form-control" placeholder="PHONE-0" id="phone_0">
@@ -86,7 +85,7 @@
   </div>  
 
   <!-- end of insert form -->
-
+  
   <input type="button" value="Add Member" onclick="addForm()" id = "addmem">  <!--///////////////--> 
   <div class="input-group-append">
     <button class="btn btn-primary" type="button" onclick="addcustomer()">Book Ticket</button>
