add new html page

--- a/client/client.html
+++ b/client/client.html
@@ -17,6 +17,11 @@
 
 
 <body>
+
+  <div id="modify">
+    <a href="modify.html"><strong>Check your Booking Info</strong><span>(if you have Booking Reference)</span></a>
+  </div>
+
   <div id="title">
     <h2>Flights Information</h2>
   </div>
