--- a/client/modify.html
+++ b/client/modify.html
@@ -30,6 +30,43 @@
     </div>
     <input type="button" value="Show my booking info" onclick="showinfo()" id = "showinfo">
    </div>
+
+    <!-- dynamic table to display todo list -->
+    <table class="table mt-5 text-center" id="customer-list">
+        <thead>
+            <tr>
+                <th>Description</th>
+                <th>Edit</th>
+                <th>Delete</th>
+            </tr>
+        </thead>
+        <!-- add todos in tbody by modying the HTML in main.js -->
+        <tbody id="todo-table">
+        </tbody>
+    </table>
+    <!-- End of dynamic table -->
+    
+      <!-- the popup modal, used for update the todo description -->
+    <div class="modal fade" id="edit-modal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                 <h5 class="modal-title" id="edit-todo-label">Edit Description</h5>
+                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                 </button>
+                </div>
+                <input type="text" class="form-control modal-body" id="edited-description">
+                <div class="modal-footer">
+                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                 <button type="button" class="btn btn-primary" id="save-edit-description">Save changes</button>
+                </div>
+            </div>
+        </div>
+    </div>
+  <!-- end of model -->
+
+
 </body>
 
 <script src="main.js"></script>
