show info from book_ref sucessfully

--- a/client/modify.html
+++ b/client/modify.html
@@ -18,7 +18,7 @@
 
 <body>
 
- <div id="client">
+  <div id="client">
     <a href="client.html"><strong>Booking new ticket</strong></a>
   </div>
   <div id = "mod"> 
@@ -41,7 +41,7 @@
             </tr>
         </thead>
         <!-- add todos in tbody by modying the HTML in main.js -->
-        <tbody id="todo-table">
+        <tbody id="info-table">
         </tbody>
     </table>
     <!-- End of dynamic table -->
