--- a/client/modify.html
+++ b/client/modify.html
@@ -35,9 +35,11 @@
     <table class="table mt-5 text-center" id="customer-list">
         <thead>
             <tr>
-                <th>Description</th>
-                <th>Edit</th>
-                <th>Delete</th>
+                <th>Passenger ID</th>
+                <th>Name</th>
+                <th>Email Address</th>
+                <th>Phone Number</th>
+                <th>Age</th>
             </tr>
         </thead>
         <!-- add todos in tbody by modying the HTML in main.js -->
