--- a/client/client.html
+++ b/client/client.html
@@ -113,7 +113,7 @@
   </div>
   <p id="bref"></p>
   <!-- dynamic table to display todo list -->
-  <table class="table mt-5 text-center" id="reserve-list">
+  <table class="table mt-5 text-center" id="boarding-info">
     <thead>
       <tr>
         <th>Name</th>
