added modify function

--- a/client/client.html
+++ b/client/client.html
@@ -19,7 +19,7 @@
 <body>
 
   <div id="modify">
-    <a href="modify.html"><strong>Check your Booking Info</strong><span>(if you have Booking Reference)</span></a>
+    <a href="modify.html"><strong>CUSTOMER<br>Check your Booking Info<br></strong><span>(if you have Booking Reference)</span></a>
   </div>
 
   <div id="title">
@@ -109,7 +109,7 @@
 
 
   <div id="title">
-    <h2>Boarding Pass</h2>
+    <h2>Ticket Infomation</h2>
   </div>
   <p id="bref"></p>
   <!-- dynamic table to display todo list -->
