--- a/client/client.html
+++ b/client/client.html
@@ -13,6 +13,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
    
+
+   <script>
+   
+	</script>
+
 </head>
 
 
@@ -54,9 +59,20 @@
 
   <!-- todo insert input box and add button -->
    <div  id="input-reserve"> 
-   
-    <input type="text" class="form-control" placeholder="Card Number" id="card_no">
-    <input type="text" class="form-control" placeholder="Flight ID" id="flightID">
+
+    <form method="post" action="" id = "f_plan">
+      <div id = "flightPlan">Select Flight Plan (select)</div>
+      <label><input type="radio" name="tripPlan" value="1">One Way</label>
+      <label><input type="radio" name="tripPlan" value="2">Round Trip</label>
+      <label><input type="radio" name="tripPlan" value="3">Multiple Flights</label>
+    </form>
+
+
+    <input type="text" class="form-control" placeholder="Credit Card Number" id="card_no">
+    <input type="text" class="form-control" placeholder="FLIGHTID-0" id="flightID_0">
+    <div id="addflight"></div>
+    <div id="incdec"></div>
+    <div id = "after_flight"></div>
     <input type="text" class="form-control" placeholder="NAME-0" id="name_0">
     <input type="text" class="form-control" placeholder="PHONE-0" id="phone_0">
     <input type="text" class="form-control" placeholder="EMAIL-0" id="email_0"> 
@@ -94,7 +110,7 @@
 
   <input type="button" value="Add Member" onclick="addForm()" id = "addmem">  <!--///////////////--> 
   <div class="input-group-append">
-    <button class="btn btn-primary" type="button" onclick="addcustomer()">Book Ticket</button>
+    <button class="btn btn-primary" type="button" onclick="BookFlight()">Book Ticket</button>
   </div>
 
 
