--- a/client/client.html
+++ b/client/client.html
@@ -61,7 +61,7 @@
    <div  id="input-reserve"> 
 
     <form method="post" action="" id = "f_plan">
-      <div id = "flightPlan">*Select Flight Plan (select)</div>
+      <div id = "flightPlan">*Select Flight Plan (Select)</div>
       <label><input type="radio" name="tripPlan" value="1" id="oneWay">One Way</label>
       <label><input type="radio" name="tripPlan" value="2">Round Trip</label>
       <label><input type="radio" name="tripPlan" value="3">Multiple Flights</label>
