--- a/client/modify.html
+++ b/client/modify.html
@@ -71,8 +71,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <h5 class="modal-title" id="edit-todo-label">
-              Edit Description<br />
-              Leave empty if not changing
+              Edit Information<br />
             </h5>
             <button
               type="button"
