--- a/client/client.html
+++ b/client/client.html
@@ -111,7 +111,7 @@
 
   <input type="button" value="Add Member" onclick="addForm()" id = "addmem">  <!--///////////////--> 
   <div class="input-group-append">
-    <button class="btn btn-primary" type="button" onclick="BookFlight()">Book Ticket</button>
+    <button class="btn btn-primary" type="button" onclick="addcustomer()">Book Ticket</button>
   </div>
 
 
