refresh DB available now

--- a/client/client.html
+++ b/client/client.html
@@ -14,15 +14,13 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
    
 
-   <script>
-   
-	</script>
-
 </head>
 
 
 <body>
-
+  
+  <button class="btn btn-primary" type="button" onclick="refreshDB()">Refresh DB</button>
+  
   <div id="modify">
     <a href="modify.html"><strong>CUSTOMER<br>Check your Booking Info<br></strong><span>(if you have Booking Reference)</span></a>
   </div>
