--- a/client/modify.html
+++ b/client/modify.html
@@ -23,6 +23,7 @@
     <div id="mod">
       <div id="title">
         <h2>Type your Booking Reference ID</h2>
+        <h2>For Ticket Check In, Info Editing & Status Lookup</h2>
         <h2>Please avoid empty spaces :)</h2>
       </div>
       <div id="book_reference">
@@ -45,13 +46,17 @@
     <table class="table mt-5 text-center" id="customer-list">
       <thead>
         <tr>
-          <th>Passenger ID</th>
           <th>Name</th>
+          <th>Passenger ID</th>
+          <th>Flight ID</th>
+          <th>Flight Status</th>
+          <th>Ticket NO.</th>
           <th>Email Address</th>
           <th>Phone Number</th>
           <th>Age</th>
           <th>Edit</th>
           <th>Delete</th>
+          <th>Check In</th>
         </tr>
       </thead>
       <!-- add todos in tbody by modying the HTML in main.js -->
