some more updates

--- a/client/client.html
+++ b/client/client.html
@@ -16,6 +16,9 @@
     />
   </head>
 
+ 
+  
+
     <div id="modify">
       <a href="modify.html"
         ><strong>CUSTOMER & CLERK<br />Check & Edit your Booking Info<br /></strong
@@ -25,6 +28,12 @@
     <div class="input-group-append1">
       <button class="btn btn-danger" type="button" onclick="refreshDB()">
         Refresh DB!
+      </button>
+    </div>
+
+    <div class="input-group-append1">
+      <button class="btn btn-info" type="button" onclick="window.location.href='pic/ER.jpeg'">
+        ER Diagram
       </button>
     </div>
 
