--- a/client/client.html
+++ b/client/client.html
@@ -37,6 +37,18 @@
       </button>
     </div>
 
+    <div class="input-group-append1">
+      <button class="btn btn-info" type="button" onclick="window.location.href='pic/UserManual.pdf'">
+        User's Manual
+      </button>
+    </div>
+
+    <div class="input-group-append1">
+      <button class="btn btn-info" type="button" onclick="window.location.href='pic/sqlFile.sql'">
+        SQL File
+      </button>
+    </div>
+
     <div id="title">
       <h2>Flights Information</h2>
     </div>
