--- a/client/client.html
+++ b/client/client.html
@@ -48,6 +48,12 @@
         SQL File
       </button>
     </div>
+    
+    <div class="input-group-append1">
+      <button class="btn btn-info" type="button" onclick="window.location.href='https://drive.google.com/drive/folders/1GTSzEiM8DovbmFbNSWFHrE4nw52Rk7xQ?usp=sharing'">
+        Explainatory Video
+      </button>
+    </div>
 
     <div id="title">
       <h2>Flights Information</h2>
